リンク付きラベル修正中

--- a/index.html
+++ b/index.html
@@ -12,4 +12,9 @@
     <div>
         <span class="c-label">news</span>
     </div>
+
+    <!-- ラベルがリンクになっているパターン
+    <div>
+        <a class="c-label-2 c-label-2--link" href="#">news</a>
+    </div> -->
 </html>
