ラベルがリンクになっているパターン追加

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <span class="c-label">news</span>
     </div>
 
-    <!-- ラベルがリンクになっているパターン
+    <!-- ラベルがリンクになっているパターン -->
     <div>
         <a class="c-label-2 c-label-2--link" href="#">news</a>
-    </div> -->
+    </div>
 </html>
