--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     </head>
 
     <!-- 基本形 -->
-    <div>
+    <div class="c-mtb">
         <span class="c-label">news</span>
     </div>
 
     <!-- ラベルがリンクになっているパターン -->
-    <div>
+    <div class="c-mtb">
         <a class="c-label-2 c-label-2--link" href="#">news</a>
     </div>
 </html>
