--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1" />
         <title>最小モジュール_ラベル</title>
+
+        <!-- css -->
         <link rel="stylesheet" href="style.css" />
+
+        <!-- FontAwesome -->
         <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+
+        <!-- favicon/webclipicon -->
+        <link rel="shortcut icon" href="favicon.ico" />
+        <link rel="apple-touch-icon" href="webclip.png" />
     </head>
 
     <!-- 基本形 -->
