--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1" />
-        <title>最小モジュール_ラベル</title>
+        <title>最小モジュール|ラベル</title>
 
         <!-- css -->
         <link rel="stylesheet" href="style.css" />
